# NightPaw

./: .env.example  .gitignore  CHANGELOG.md  README.md  checks.py  config.py  main.py  pyproject.toml  start_nightpaw.bat
cogs/: ai.py  automod.py  avatar.py  birthday.py  blaze.py  cogmanager.py  help.py  kael.py  lore.py  matthijs.py  moderation.py  pack.py  packhealth.py  sysadmin.py  utility.py  wolf_lore.py
crates/nightpaw_rs/: Cargo.toml  pyproject.toml
crates/nightpaw_rs/src/: lib.rs
docs/: dev-helper.md
docs/legal/: README.md  privacy-policy.md  terms-of-service.md
scripts/: commit.ps1  commit_context.ps1  dev.ps1  nightpaw-dev.ps1  release.ps1
services/: __init__.py  ai_media.py  ai_service.py  ai_state.py  birthday_service.py  db.py  feature_intelligence.py  guild_policy_service.py  reminder_service.py  runtime_intelligence.py  rust_bridge.py  startup_update_service.py  trust_service.py  warning_service.py
tests/: test_ai_serveradmin_commands.py  test_rust_bridge.py
