[project]
name = "nightpaw"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "discord-py[voice]>=2.0",
    "python-dotenv",
    "aiosqlite",
    "aiohttp",
    "psutil>=7.2.2",
    "ephem>=4.2.1",
]

[dependency-groups]
dev = [
    "maturin>=1.7,<2",
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
